Fix quiz overflow, add automatic input focus in typein quizes

--- a/SoloLearn/app/Scripts/components/Shared/Quiz/styles.scss
+++ b/SoloLearn/app/Scripts/components/Shared/Quiz/styles.scss
@@ -22,4 +22,7 @@
 	.fill-in-answers-container {
 		margin: 20px;
 	}
+	.answer-input-field {
+		overflow: hidden;
+	}
 }
